Remove more files.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ FriedLiver/FriedLiver.sdf
 FriedLiver/FriedLiver.opensdf
 FriedLiver/FriedLiver.v12.suo
 FriedLiver/ipch
+FriedLiver/CompiledShaders
+FriedLiver/FriedLiver.vcxproj.user
+FriedLiver/vc120.pdb
